antlr4_cpp/demo/generated/TParser.cpp
/* parser/listener/visitor header section */

// Generated from /home/jona/software/antlr4/antlr4-master/runtime/Cpp/demo/TParser.g4 by ANTLR 4.7.1

/* parser precinclude section */

#include "TParserListener.h"
#include "TParserVisitor.h"

#include "TParser.h"


/* parser postinclude section */
#ifndef _WIN32
#pragma GCC diagnostic ignored "-Wunused-parameter"
#endif


using namespace antlrcpp;
using namespace antlrcpptest;
using namespace antlr4;

TParser::TParser(TokenStream *input) : Parser(input) {
  _interpreter = new atn::ParserATNSimulator(this, _atn, _decisionToDFA, _sharedContextCache);
}

TParser::~TParser() {
  delete _interpreter;
}

std::string TParser::getGrammarFileName() const {
  return "TParser.g4";
}

const std::vector<std::string>& TParser::getRuleNames() const {
  return _ruleNames;
}

dfa::Vocabulary& TParser::getVocabulary() const {
  return _vocabulary;
}

/* parser definitions section */

//----------------- MainContext ------------------------------------------------------------------

TParser::MainContext::MainContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* TParser::MainContext::EOF() {
  return getToken(TParser::EOF, 0);
}

std::vector<TParser::StatContext *> TParser::MainContext::stat() {
  return getRuleContexts<TParser::StatContext>();
}

TParser::StatContext* TParser::MainContext::stat(size_t i) {
  return getRuleContext<TParser::StatContext>(i);
}


size_t TParser::MainContext::getRuleIndex() const {
  return TParser::RuleMain;
}

void TParser::MainContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<TParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterMain(this);
}

void TParser::MainContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<TParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitMain(this);
}


antlrcpp::Any TParser::MainContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<TParserVisitor*>(visitor))
    return parserVisitor->visitMain(this);
  else
    return visitor->visitChildren(this);
}

TParser::MainContext* TParser::main() {
  MainContext *_localctx = _tracker.createInstance<MainContext>(_ctx, getState());
  enterRule(_localctx, 0, TParser::RuleMain);
  size_t _la = 0;

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(27); 
    _errHandler->sync(this);
    _la = _input->LA(1);
    do {
      setState(26);
      stat();
      setState(29); 
      _errHandler->sync(this);
      _la = _input->LA(1);
    } while ((((_la & ~ 0x3fULL) == 0) &&
      ((1ULL << _la) & ((1ULL << TParser::Return)
      | (1ULL << TParser::Continue)
      | (1ULL << TParser::INT)
      | (1ULL << TParser::ID)
      | (1ULL << TParser::OpenPar)
      | (1ULL << TParser::String))) != 0));
    setState(31);
    match(TParser::EOF);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- DivideContext ------------------------------------------------------------------

TParser::DivideContext::DivideContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* TParser::DivideContext::ID() {
  return getToken(TParser::ID, 0);
}

TParser::And_Context* TParser::DivideContext::and_() {
  return getRuleContext<TParser::And_Context>(0);
}

tree::TerminalNode* TParser::DivideContext::GreaterThan() {
  return getToken(TParser::GreaterThan, 0);
}


size_t TParser::DivideContext::getRuleIndex() const {
  return TParser::RuleDivide;
}

void TParser::DivideContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<TParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterDivide(this);
}

void TParser::DivideContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<TParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitDivide(this);
}


antlrcpp::Any TParser::DivideContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<TParserVisitor*>(visitor))
    return parserVisitor->visitDivide(this);
  else
    return visitor->visitChildren(this);
}

TParser::DivideContext* TParser::divide() {
  DivideContext *_localctx = _tracker.createInstance<DivideContext>(_ctx, getState());
  enterRule(_localctx, 2, TParser::RuleDivide);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(33);
    match(TParser::ID);
    setState(37);
    _errHandler->sync(this);

    switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 1, _ctx)) {
    case 1: {
      setState(34);
      and_();
      setState(35);
      match(TParser::GreaterThan);
      break;
    }

    }
    setState(39);

    if (!(doesItBlend())) throw FailedPredicateException(this, "doesItBlend()");
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- And_Context ------------------------------------------------------------------

TParser::And_Context::And_Context(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* TParser::And_Context::And() {
  return getToken(TParser::And, 0);
}


size_t TParser::And_Context::getRuleIndex() const {
  return TParser::RuleAnd_;
}

void TParser::And_Context::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<TParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterAnd_(this);
}

void TParser::And_Context::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<TParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitAnd_(this);
}


antlrcpp::Any TParser::And_Context::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<TParserVisitor*>(visitor))
    return parserVisitor->visitAnd_(this);
  else
    return visitor->visitChildren(this);
}

TParser::And_Context* TParser::and_() {
  And_Context *_localctx = _tracker.createInstance<And_Context>(_ctx, getState());
  enterRule(_localctx, 4, TParser::RuleAnd_);
   doInit(); 

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(41);
    match(TParser::And);
   _ctx->stop = _input->LT(-1);
     doAfter(); 
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- ConquerContext ------------------------------------------------------------------

TParser::ConquerContext::ConquerContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

std::vector<TParser::DivideContext *> TParser::ConquerContext::divide() {
  return getRuleContexts<TParser::DivideContext>();
}

TParser::DivideContext* TParser::ConquerContext::divide(size_t i) {
  return getRuleContext<TParser::DivideContext>(i);
}

TParser::And_Context* TParser::ConquerContext::and_() {
  return getRuleContext<TParser::And_Context>(0);
}

tree::TerminalNode* TParser::ConquerContext::ID() {
  return getToken(TParser::ID, 0);
}

std::vector<tree::TerminalNode *> TParser::ConquerContext::LessThan() {
  return getTokens(TParser::LessThan);
}

tree::TerminalNode* TParser::ConquerContext::LessThan(size_t i) {
  return getToken(TParser::LessThan, i);
}


size_t TParser::ConquerContext::getRuleIndex() const {
  return TParser::RuleConquer;
}

void TParser::ConquerContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<TParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterConquer(this);
}

void TParser::ConquerContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<TParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitConquer(this);
}


antlrcpp::Any TParser::ConquerContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<TParserVisitor*>(visitor))
    return parserVisitor->visitConquer(this);
  else
    return visitor->visitChildren(this);
}

TParser::ConquerContext* TParser::conquer() {
  ConquerContext *_localctx = _tracker.createInstance<ConquerContext>(_ctx, getState());
  enterRule(_localctx, 6, TParser::RuleConquer);
  size_t _la = 0;

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    setState(63);
    _errHandler->sync(this);
    switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 5, _ctx)) {
    case 1: {
      enterOuterAlt(_localctx, 1);
      setState(44); 
      _errHandler->sync(this);
      _la = _input->LA(1);
      do {
        setState(43);
        divide();
        setState(46); 
        _errHandler->sync(this);
        _la = _input->LA(1);
      } while (_la == TParser::ID);
      break;
    }

    case 2: {
      enterOuterAlt(_localctx, 2);
      setState(48);

      if (!(doesItBlend())) throw FailedPredicateException(this, "doesItBlend()");
      setState(49);
      and_();
       myAction(); 
      break;
    }

    case 3: {
      enterOuterAlt(_localctx, 3);
      setState(52);
      dynamic_cast<ConquerContext *>(_localctx)->idToken = match(TParser::ID);
      setState(60);
      _errHandler->sync(this);

      switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 4, _ctx)) {
      case 1 + 1: {
        setState(56);
        _errHandler->sync(this);
        _la = _input->LA(1);
        while (_la == TParser::LessThan) {
          setState(53);
          match(TParser::LessThan);
          setState(58);
          _errHandler->sync(this);
          _la = _input->LA(1);
        }
        setState(59);
        divide();
        break;
      }

      }
       (dynamic_cast<ConquerContext *>(_localctx)->idToken != nullptr ? dynamic_cast<ConquerContext *>(_localctx)->idToken->getText() : ""); 
      break;
    }

    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- UnusedContext ------------------------------------------------------------------

TParser::UnusedContext::UnusedContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

TParser::UnusedContext::UnusedContext(ParserRuleContext *parent, size_t invokingState, double input)
  : ParserRuleContext(parent, invokingState) {
  this->input = input;
}

TParser::StatContext* TParser::UnusedContext::stat() {
  return getRuleContext<TParser::StatContext>(0);
}


size_t TParser::UnusedContext::getRuleIndex() const {
  return TParser::RuleUnused;
}

void TParser::UnusedContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<TParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterUnused(this);
}

void TParser::UnusedContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<TParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitUnused(this);
}


antlrcpp::Any TParser::UnusedContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<TParserVisitor*>(visitor))
    return parserVisitor->visitUnused(this);
  else
    return visitor->visitChildren(this);
}

TParser::UnusedContext* TParser::unused(double input) {
  UnusedContext *_localctx = _tracker.createInstance<UnusedContext>(_ctx, getState(), input);
  enterRule(_localctx, 8, TParser::RuleUnused);
   doInit(); 

  auto onExit = finally([=] {

    cleanUp();

    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(65);
    stat();
   _ctx->stop = _input->LT(-1);
     doAfter(); 
  }
  catch (...) {

      // Replaces the standard exception handling.

  }
  return _localctx;
}

//----------------- Unused2Context ------------------------------------------------------------------

TParser::Unused2Context::Unused2Context(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

std::vector<tree::TerminalNode *> TParser::Unused2Context::Semicolon() {
  return getTokens(TParser::Semicolon);
}

tree::TerminalNode* TParser::Unused2Context::Semicolon(size_t i) {
  return getToken(TParser::Semicolon, i);
}

std::vector<TParser::UnusedContext *> TParser::Unused2Context::unused() {
  return getRuleContexts<TParser::UnusedContext>();
}

TParser::UnusedContext* TParser::Unused2Context::unused(size_t i) {
  return getRuleContext<TParser::UnusedContext>(i);
}

tree::TerminalNode* TParser::Unused2Context::Colon() {
  return getToken(TParser::Colon, 0);
}

tree::TerminalNode* TParser::Unused2Context::Plus() {
  return getToken(TParser::Plus, 0);
}


size_t TParser::Unused2Context::getRuleIndex() const {
  return TParser::RuleUnused2;
}

void TParser::Unused2Context::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<TParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterUnused2(this);
}

void TParser::Unused2Context::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<TParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitUnused2(this);
}


antlrcpp::Any TParser::Unused2Context::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<TParserVisitor*>(visitor))
    return parserVisitor->visitUnused2(this);
  else
    return visitor->visitChildren(this);
}

TParser::Unused2Context* TParser::unused2() {
  Unused2Context *_localctx = _tracker.createInstance<Unused2Context>(_ctx, getState());
  enterRule(_localctx, 10, TParser::RuleUnused2);
  size_t _la = 0;

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    size_t alt;
    enterOuterAlt(_localctx, 1);
    setState(70); 
    _errHandler->sync(this);
    alt = 1;
    do {
      switch (alt) {
        case 1: {
              setState(67);
              unused(1);
              setState(68);
              matchWildcard();
              break;
            }

      default:
        throw NoViableAltException(this);
      }
      setState(72); 
      _errHandler->sync(this);
      alt = getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 6, _ctx);
    } while (alt != 2 && alt != atn::ATN::INVALID_ALT_NUMBER);
    setState(75);
    _errHandler->sync(this);

    switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 7, _ctx)) {
    case 1: {
      setState(74);
      _la = _input->LA(1);
      if (!((((_la & ~ 0x3fULL) == 0) &&
        ((1ULL << _la) & ((1ULL << TParser::Colon)
        | (1ULL << TParser::Semicolon)
        | (1ULL << TParser::Plus))) != 0))) {
      _errHandler->recoverInline(this);
      }
      else {
        _errHandler->reportMatch(this);
        consume();
      }
      break;
    }

    }
    setState(77);
    _la = _input->LA(1);
    if (_la == 0 || _la == Token::EOF || (_la == TParser::Semicolon)) {
    _errHandler->recoverInline(this);
    }
    else {
      _errHandler->reportMatch(this);
      consume();
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- StatContext ------------------------------------------------------------------

TParser::StatContext::StatContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

std::vector<TParser::ExprContext *> TParser::StatContext::expr() {
  return getRuleContexts<TParser::ExprContext>();
}

TParser::ExprContext* TParser::StatContext::expr(size_t i) {
  return getRuleContext<TParser::ExprContext>(i);
}

tree::TerminalNode* TParser::StatContext::Equal() {
  return getToken(TParser::Equal, 0);
}

tree::TerminalNode* TParser::StatContext::Semicolon() {
  return getToken(TParser::Semicolon, 0);
}


size_t TParser::StatContext::getRuleIndex() const {
  return TParser::RuleStat;
}

void TParser::StatContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<TParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterStat(this);
}

void TParser::StatContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<TParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitStat(this);
}


antlrcpp::Any TParser::StatContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<TParserVisitor*>(visitor))
    return parserVisitor->visitStat(this);
  else
    return visitor->visitChildren(this);
}

TParser::StatContext* TParser::stat() {
  StatContext *_localctx = _tracker.createInstance<StatContext>(_ctx, getState());
  enterRule(_localctx, 12, TParser::RuleStat);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    setState(87);
    _errHandler->sync(this);
    switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 8, _ctx)) {
    case 1: {
      enterOuterAlt(_localctx, 1);
      setState(79);
      expr(0);
      setState(80);
      match(TParser::Equal);
      setState(81);
      expr(0);
      setState(82);
      match(TParser::Semicolon);
      break;
    }

    case 2: {
      enterOuterAlt(_localctx, 2);
      setState(84);
      expr(0);
      setState(85);
      match(TParser::Semicolon);
      break;
    }

    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- ExprContext ------------------------------------------------------------------

TParser::ExprContext::ExprContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* TParser::ExprContext::OpenPar() {
  return getToken(TParser::OpenPar, 0);
}

std::vector<TParser::ExprContext *> TParser::ExprContext::expr() {
  return getRuleContexts<TParser::ExprContext>();
}

TParser::ExprContext* TParser::ExprContext::expr(size_t i) {
  return getRuleContext<TParser::ExprContext>(i);
}

tree::TerminalNode* TParser::ExprContext::ClosePar() {
  return getToken(TParser::ClosePar, 0);
}

TParser::IdContext* TParser::ExprContext::id() {
  return getRuleContext<TParser::IdContext>(0);
}

TParser::FlowControlContext* TParser::ExprContext::flowControl() {
  return getRuleContext<TParser::FlowControlContext>(0);
}

tree::TerminalNode* TParser::ExprContext::INT() {
  return getToken(TParser::INT, 0);
}

tree::TerminalNode* TParser::ExprContext::String() {
  return getToken(TParser::String, 0);
}

tree::TerminalNode* TParser::ExprContext::Star() {
  return getToken(TParser::Star, 0);
}

tree::TerminalNode* TParser::ExprContext::Plus() {
  return getToken(TParser::Plus, 0);
}

tree::TerminalNode* TParser::ExprContext::QuestionMark() {
  return getToken(TParser::QuestionMark, 0);
}

tree::TerminalNode* TParser::ExprContext::Colon() {
  return getToken(TParser::Colon, 0);
}

tree::TerminalNode* TParser::ExprContext::Equal() {
  return getToken(TParser::Equal, 0);
}


size_t TParser::ExprContext::getRuleIndex() const {
  return TParser::RuleExpr;
}

void TParser::ExprContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<TParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterExpr(this);
}

void TParser::ExprContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<TParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitExpr(this);
}


antlrcpp::Any TParser::ExprContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<TParserVisitor*>(visitor))
    return parserVisitor->visitExpr(this);
  else
    return visitor->visitChildren(this);
}


TParser::ExprContext* TParser::expr() {
   return expr(0);
}

TParser::ExprContext* TParser::expr(int precedence) {
  ParserRuleContext *parentContext = _ctx;
  size_t parentState = getState();
  TParser::ExprContext *_localctx = _tracker.createInstance<ExprContext>(_ctx, parentState);
  TParser::ExprContext *previousContext = _localctx;
  size_t startState = 14;
  enterRecursionRule(_localctx, 14, TParser::RuleExpr, precedence);

    

  auto onExit = finally([=] {
    unrollRecursionContexts(parentContext);
  });
  try {
    size_t alt;
    enterOuterAlt(_localctx, 1);
    setState(98);
    _errHandler->sync(this);
    switch (_input->LA(1)) {
      case TParser::OpenPar: {
        setState(90);
        match(TParser::OpenPar);
        setState(91);
        expr(0);
        setState(92);
        match(TParser::ClosePar);
        break;
      }

      case TParser::ID: {
        setState(94);
        dynamic_cast<ExprContext *>(_localctx)->identifier = id();
        break;
      }

      case TParser::Return:
      case TParser::Continue: {
        setState(95);
        flowControl();
        break;
      }

      case TParser::INT: {
        setState(96);
        match(TParser::INT);
        break;
      }

      case TParser::String: {
        setState(97);
        match(TParser::String);
        break;
      }

    default:
      throw NoViableAltException(this);
    }
    _ctx->stop = _input->LT(-1);
    setState(117);
    _errHandler->sync(this);
    alt = getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 11, _ctx);
    while (alt != 2 && alt != atn::ATN::INVALID_ALT_NUMBER) {
      if (alt == 1) {
        if (!_parseListeners.empty())
          triggerExitRuleEvent();
        previousContext = _localctx;
        setState(115);
        _errHandler->sync(this);
        switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 10, _ctx)) {
        case 1: {
          _localctx = _tracker.createInstance<ExprContext>(parentContext, parentState);
          pushNewRecursionContext(_localctx, startState, RuleExpr);
          setState(100);

          if (!(precpred(_ctx, 9))) throw FailedPredicateException(this, "precpred(_ctx, 9)");
          setState(101);
          match(TParser::Star);
          setState(102);
          expr(10);
          break;
        }

        case 2: {
          _localctx = _tracker.createInstance<ExprContext>(parentContext, parentState);
          pushNewRecursionContext(_localctx, startState, RuleExpr);
          setState(103);

          if (!(precpred(_ctx, 8))) throw FailedPredicateException(this, "precpred(_ctx, 8)");
          setState(104);
          match(TParser::Plus);
          setState(105);
          expr(9);
          break;
        }

        case 3: {
          _localctx = _tracker.createInstance<ExprContext>(parentContext, parentState);
          pushNewRecursionContext(_localctx, startState, RuleExpr);
          setState(106);

          if (!(precpred(_ctx, 6))) throw FailedPredicateException(this, "precpred(_ctx, 6)");
          setState(107);
          match(TParser::QuestionMark);
          setState(108);
          expr(0);
          setState(109);
          match(TParser::Colon);
          setState(110);
          expr(6);
          break;
        }

        case 4: {
          _localctx = _tracker.createInstance<ExprContext>(parentContext, parentState);
          pushNewRecursionContext(_localctx, startState, RuleExpr);
          setState(112);

          if (!(precpred(_ctx, 5))) throw FailedPredicateException(this, "precpred(_ctx, 5)");
          setState(113);
          match(TParser::Equal);
          setState(114);
          expr(5);
          break;
        }

        } 
      }
      setState(119);
      _errHandler->sync(this);
      alt = getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 11, _ctx);
    }
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }
  return _localctx;
}

//----------------- FlowControlContext ------------------------------------------------------------------

TParser::FlowControlContext::FlowControlContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}


size_t TParser::FlowControlContext::getRuleIndex() const {
  return TParser::RuleFlowControl;
}

void TParser::FlowControlContext::copyFrom(FlowControlContext *ctx) {
  ParserRuleContext::copyFrom(ctx);
}

//----------------- ReturnContext ------------------------------------------------------------------

tree::TerminalNode* TParser::ReturnContext::Return() {
  return getToken(TParser::Return, 0);
}

TParser::ExprContext* TParser::ReturnContext::expr() {
  return getRuleContext<TParser::ExprContext>(0);
}

TParser::ReturnContext::ReturnContext(FlowControlContext *ctx) { copyFrom(ctx); }

void TParser::ReturnContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<TParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterReturn(this);
}
void TParser::ReturnContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<TParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitReturn(this);
}

antlrcpp::Any TParser::ReturnContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<TParserVisitor*>(visitor))
    return parserVisitor->visitReturn(this);
  else
    return visitor->visitChildren(this);
}
//----------------- ContinueContext ------------------------------------------------------------------

tree::TerminalNode* TParser::ContinueContext::Continue() {
  return getToken(TParser::Continue, 0);
}

TParser::ContinueContext::ContinueContext(FlowControlContext *ctx) { copyFrom(ctx); }

void TParser::ContinueContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<TParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterContinue(this);
}
void TParser::ContinueContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<TParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitContinue(this);
}

antlrcpp::Any TParser::ContinueContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<TParserVisitor*>(visitor))
    return parserVisitor->visitContinue(this);
  else
    return visitor->visitChildren(this);
}
TParser::FlowControlContext* TParser::flowControl() {
  FlowControlContext *_localctx = _tracker.createInstance<FlowControlContext>(_ctx, getState());
  enterRule(_localctx, 16, TParser::RuleFlowControl);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    setState(123);
    _errHandler->sync(this);
    switch (_input->LA(1)) {
      case TParser::Return: {
        _localctx = dynamic_cast<FlowControlContext *>(_tracker.createInstance<TParser::ReturnContext>(_localctx));
        enterOuterAlt(_localctx, 1);
        setState(120);
        match(TParser::Return);
        setState(121);
        expr(0);
        break;
      }

      case TParser::Continue: {
        _localctx = dynamic_cast<FlowControlContext *>(_tracker.createInstance<TParser::ContinueContext>(_localctx));
        enterOuterAlt(_localctx, 2);
        setState(122);
        match(TParser::Continue);
        break;
      }

    default:
      throw NoViableAltException(this);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- IdContext ------------------------------------------------------------------

TParser::IdContext::IdContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* TParser::IdContext::ID() {
  return getToken(TParser::ID, 0);
}


size_t TParser::IdContext::getRuleIndex() const {
  return TParser::RuleId;
}

void TParser::IdContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<TParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterId(this);
}

void TParser::IdContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<TParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitId(this);
}


antlrcpp::Any TParser::IdContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<TParserVisitor*>(visitor))
    return parserVisitor->visitId(this);
  else
    return visitor->visitChildren(this);
}
